# bgpd-simple

./: .gitignore  CMakeLists.txt  README.md
conf/: bgpd-interfaces.conf  bgpd.conf  bgpd.conf.old  new.conf
include/bgp/: afi_ipv4u.h  afi_ipv6u.h  attrs.h  bgp.h  cfg.h  cli.h  core.h  core_vpn.h  dbg.h  debug.h  decision.h  event.h  evpn.h  extcomm.h  fsm.h  interface.h  label.h  log.h  mp_update.h  mpbgp.h  mpls.h  msg.h  netlink.h  nlri.h  peer.h  policy.h  rib.h  rib6.h  signals.h  sock.h  timer_wheel.h  update.h  update6.h  update_wire.h  util.h  vpls.h  vpn.h  vrf.h  wire_util.h
include/bgp/platform/: event.h  route.h
src/: afi_ipv4u.c  afi_ipv6u.c  attrs.c  bgp.c  cfg_lex.c  cfg_parse.c  cfg_write.c  cli.c  core.c  core_vpn.c  dbg.c  debug.c  decision.c  decision6.c  event_epoll.c  event_kqueue.c  evpn.c  extcomm.c  fsm.c  interface_linux.c  interface_stub.c  label.c  log.c  main.c  malloc_trace.c  mp_update.c  mpbgp.c  mpls_netlink_linux.c  mpls_stub.c  msg.c  netlink_linux.c  netlink_stub.c  nlri.c  peer.c  policy.c  rib.c  rib6.c  signals.c  sock.c  timer_wheel.c  (+7 more)
